--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <nav>
       <div class="container">
-        <img src="logo.png" alt="" width="79" height="27px" id = "logo">
+        <img src="" alt="" width="79" height="27px" id = "logo">
         <ul>
           <li>Features</li>
           <li>About</li>
